--- a/Client/Pages/Bird.razor
+++ b/Client/Pages/Bird.razor
@@ -36,7 +36,7 @@ else
                 @if (!string.IsNullOrWhiteSpace(bird.Comment))
                 {
                     <dt class="col-sm-3">Poznámka</dt>
-                    <dd class="col-sm-9">@bird.Comment</dd>
+                    <dd class="col-sm-8" style="white-space: pre-wrap;">@bird.Comment</dd>
                 }
             </dl>
 
